objects/redwing__Question_Line__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Question_Bank_Import_Type__c</fullName>
        <label>Question Bank Import Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
                <value>
                    <fullName>Dynamic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Question_Display_Count__c</fullName>
        <label>Question Display Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Quiz__c</fullName>
        <label>Quiz</label>
        <referenceTo>redwing__Quiz__c</referenceTo>
        <relationshipLabel>Question Lines</relationshipLabel>
        <relationshipName>Question_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>redwing__Total_Questions__c</fullName>
        <label>Total Questions</label>
        <summaryForeignKey>redwing__Question__c.redwing__Question_Line__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Question Line</label>
    <nameField>
        <label>Question Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>